--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+jupyter>=1.0
+notebook>=6.2
 ipython>=2.0
 matplotlib>=1.2.1
 numpy>=1.7.1
-pymc==2.3.4
+pymc3>=2.3.4
 pyzmq>=13.1.0
 scipy>=0.12.0
 tornado>=3.0.2
